# edamame-alpha

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  compose.yaml
.github/workflows/: ghcr.yml
docs/: README.md  api.md  running.md
examples/: bench.rs
src/: config.rs  error.rs  lib.rs
src/core/: http.rs  ingest.rs  manifest.rs  mod.rs  placement.rs  registry.rs  storage.rs
src/domain/: cache_node.rs  mod.rs  playlist.rs  rendition.rs  segment.rs  window.rs
src/node/: cache.rs  heartbeat.rs  mod.rs  prewarm.rs
tests/contract/: cli.rs  http_core_node.rs
tests/integration/: ingest_generated_playlists.rs  node_lifecycle.rs  prewarm_retention.rs
tests/support/: mod.rs
tests/unit/: manifest_rewrite.rs  placement.rs  rendition_metadata.rs  state_transitions.rs
